--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>VanillaWeb</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <div>
       <h2>Hello VanillaWeb</h2>
     </div>
-    <script src="main.js"></script>
   </body>
 </html>
